Fixe alignment

--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ footer h2 {
   }
 
   body {
-    align-items: flex-start;
+    align-items: center;
   }
 
   main {
@@ -426,7 +426,7 @@ footer h2 {
     flex-direction: column;
     /* align-items: center; */
     width: 150px;
-    height: 250px;
+    height: 220px;
     /* border: 1px solid #232f3e; */
     box-shadow: 0px 0px 2px #000000;
     /* padding: 10px; */
@@ -457,6 +457,9 @@ footer h2 {
   .card-info {
     font-size: 10px;
     padding: 0 5px;
+    white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
   }
 
   .card-info .star img {
